# myworkflow

./: .gitignore  README.md
.github/workflows/: blog-deploy.yml  cross-post.yml  secret-scan.yml
blog/: astro.config.mjs  package.json  pnpm-lock.yaml
blog/public/: _headers  robots.txt
blog/src/: content.config.ts
blog/src/components/: AuthorBio.astro  CrossPostNotice.astro  Footer.astro  Head.astro  Header.astro  NewsletterForm.astro  Pagination.astro  PostCard.astro  ReadingTime.astro  TableOfContents.astro  TagList.astro
blog/src/layouts/: BaseLayout.astro  PostLayout.astro
blog/src/utils/: seo.ts  (+1 more)
plans/: blog-build-plan.md  tools-build-plan.md
research/: content-automation-tech-stack-2026.md  developer-blogging-research-2026.md  developer-communities-research.md  developer-content-pipeline-brand-building-2026.md  developer-personal-branding-social-media-2025-2026.md  research-developer-brand-building.md  social-media-blog-automation-tools-2026.md
tools/analytics/: Makefile  go.mod  go.sum  main.go
tools/content-cli/: .env.example  pyproject.toml
tools/content-cli/myworkflow/: __init__.py  cli.py  config.py  db.py  sanitize.py
tools/content-cli/myworkflow/newsletter/: api.py  sender.py
tools/content-cli/myworkflow/newsletter/templates/: confirm.html  edition.html
tools/content-cli/myworkflow/repurpose/: engine.py
tools/content-cli/myworkflow/repurpose/prompts/: __init__.py
tools/content-cli/myworkflow/shared/: http.py  logging.py  ratelimit.py  utm.py
tools/content-cli/tests/: test_db.py  test_ratelimit.py  test_sanitize.py  test_utm.py
(+24 files in other folders)
