[project]
name = "myworkflow"
version = "0.1.0"
description = "Content automation CLI -- cross-post, repurpose, social, newsletter"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.15.0",
    "rich>=14.0.0",
    "httpx>=0.28.0",
    "python-frontmatter>=1.1.0",
    "anthropic>=0.52.0",
    "resend>=2.7.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.2.0",
]

[project.scripts]
myworkflow = "myworkflow.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:ament_copyright -p no:ament_flake8 -p no:ament_lint -p no:ament_xmllint -p no:ament_pep257 -p no:launch_testing -p no:launch_testing_ros"

[project.optional-dependencies]
social = [
    "tweepy>=4.14.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
